--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 }
             } catch (error) {
                 console.error("Error:", error);
-                addMessage("bot", "Error: Could not retrieve information.");
+                addMessage("bot", "Error: Could not retrieve Information.");
             }
         }
 
